fixed footer spacing issues

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -305,7 +305,7 @@ p {
 	}
 
 	img {
-		padding: 20% 0 7% 0;
+		padding: 10% 0 7% 0;
 		width: 8rem;
 		height: auto;
 	}
